src/y.output
Terminals which are not used

   TOKEOF
   _IMAGINARY


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: top_level_decl
    2                 | translation_unit top_level_decl

    3 top_level_decl: decl
    4               | func_def

    5 decl: decl_specs init_declarator_list ';'

    6 decl_specs: storage_class_spec decl_specs
    7           | storage_class_spec
    8           | type_spec decl_specs
    9           | type_spec
   10           | type_qualifier decl_specs
   11           | type_qualifier
   12           | func_spec decl_specs
   13           | func_spec

   14 init_declarator_list: init_declarator
   15                     | init_declarator_list ',' init_declarator

   16 init_declarator: declarator
   17                | declarator '=' initializer

   18 storage_class_spec: AUTO
   19                   | EXTERN
   20                   | REGISTER
   21                   | STATIC
   22                   | TYPEDEF

   23 func_spec: INLINE

   24 type_spec: enum_type_spec
   25          | float_type_spec
   26          | int_type_spec
   27          | struct_type_spec
   28          | union_type_spec
   29          | void_type_spec

   30 enum_type_spec: enum_type_def
   31               | enum_type_ref

   32 enum_type_def: ENUM enum_tag '{' enum_def_list ',' '}'
   33              | ENUM '{' enum_def_list ',' '}'
   34              | ENUM enum_tag '{' enum_def_list '}'
   35              | ENUM '{' enum_def_list '}'

   36 enum_type_ref: ENUM enum_tag

   37 enum_tag: IDENT

   38 enum_def_list: enum_constant_def
   39              | enum_def_list ',' enum_constant_def

   40 enum_constant_def: enum_constant
   41                  | enum_constant '=' assign_expr

   42 enum_constant: IDENT

   43 float_type_spec: FLOAT
   44                | DOUBLE
   45                | LONG DOUBLE
   46                | complex_type_spec

   47 complex_type_spec: FLOAT _COMPLEX
   48                  | DOUBLE _COMPLEX
   49                  | LONG DOUBLE _COMPLEX

   50 int_type_spec: signed_type_spec
   51              | unsigned_type_spec
   52              | char_type_spec
   53              | bool_type_spec

   54 signed_type_spec: SHORT
   55                 | SHORT INT
   56                 | SIGNED SHORT
   57                 | SIGNED SHORT INT
   58                 | INT
   59                 | SIGNED INT
   60                 | SIGNED
   61                 | LONG
   62                 | LONG INT
   63                 | SIGNED LONG
   64                 | SIGNED LONG INT
   65                 | LONG LONG
   66                 | LONG LONG INT
   67                 | SIGNED LONG LONG
   68                 | SIGNED LONG LONG INT

   69 unsigned_type_spec: UNSIGNED SHORT
   70                   | UNSIGNED SHORT INT
   71                   | UNSIGNED INT
   72                   | UNSIGNED
   73                   | UNSIGNED LONG
   74                   | UNSIGNED LONG INT
   75                   | UNSIGNED LONG LONG
   76                   | UNSIGNED LONG LONG INT

   77 char_type_spec: CHAR
   78               | SIGNED CHAR
   79               | UNSIGNED CHAR

   80 bool_type_spec: _BOOL

   81 struct_type_spec: struct_type_def
   82                 | struct_type_ref

   83 struct_type_def: STRUCT struct_tag '{' field_list '}'
   84                | STRUCT '{' field_list '}'

   85 struct_tag: IDENT

   86 struct_type_ref: STRUCT struct_tag

   87 field_list: component_decl
   88           | field_list component_decl

   89 component_decl: type_spec component_declarator_list ';'

   90 component_declarator_list: component_declarator
   91                          | component_declarator_list ',' component_declarator

   92 component_declarator: simple_component
   93                     | bit_field

   94 simple_component: declarator

   95 bit_field: declarator ':' constant_expr
   96          | ':' constant_expr

   97 union_type_spec: union_type_def
   98                | union_type_ref

   99 union_type_def: UNION union_tag '{' field_list '}'
  100               | UNION '{' field_list '}'

  101 union_type_ref: UNION union_tag

  102 union_tag: IDENT

  103 void_type_spec: VOID

  104 type_name: decl_specs abstract_declarator
  105          | decl_specs

  106 abstract_declarator: pointer
  107                    | pointer direct_abstract_declarator
  108                    | direct_abstract_declarator

  109 type_qualifier_list: type_qualifier
  110                    | type_qualifier_list type_qualifier

  111 direct_abstract_declarator: '(' abstract_declarator ')'
  112                           | direct_abstract_declarator '[' constant_expr ']'
  113                           | '[' constant_expr ']'
  114                           | direct_abstract_declarator '[' ']'
  115                           | '[' ']'
  116                           | direct_abstract_declarator '(' parameter_type_list ')'
  117                           | '(' parameter_type_list ')'
  118                           | direct_abstract_declarator '(' ')'
  119                           | '(' ')'

  120 type_qualifier: CONST
  121               | VOLATILE
  122               | RESTRICT

  123 declarator: pointer_declarator
  124           | direct_declarator

  125 direct_declarator: simple_declarator
  126                  | '(' declarator ')'
  127                  | func_declarator
  128                  | array_declarator

  129 simple_declarator: IDENT

  130 pointer_declarator: pointer direct_declarator

  131 pointer: '*' type_qualifier_list
  132        | '*'
  133        | '*' type_qualifier_list pointer
  134        | '*' pointer

  135 array_declarator: direct_declarator '[' NUMBER ']'
  136                 | direct_declarator '[' ']'

  137 constant_expr: cond_expr

  138 func_declarator: direct_declarator '(' parameter_type_list ')'
  139                | direct_declarator '(' identifier_list ')'
  140                | direct_declarator '(' ')'

  141 parameter_type_list: parameter_list
  142                    | parameter_list ',' ELLIPSIS

  143 parameter_list: parameter_decl
  144               | parameter_list ',' parameter_decl

  145 parameter_decl: decl_specs declarator
  146               | decl_specs abstract_declarator

  147 identifier_list: IDENT
  148                | parameter_list ',' IDENT

  149 initializer: assign_expr
  150            | '{' initializer_list ',' '}'
  151            | '{' initializer_list '}'

  152 initializer_list: initializer
  153                 | initializer_list ',' initializer
  154                 | designation initializer
  155                 | initializer_list ',' designation initializer

  156 designation: designator_list '='

  157 designator_list: designator
  158                | designator_list designator

  159 designator: '[' constant_expr ']'
  160           | '.' IDENT

  161 @1: /* empty */

  162 func_def: func_def_specifier @1 compound_statement

  163 func_def_specifier: decl_specs declarator decl_list
  164                   | decl_specs declarator
  165                   | declarator decl_list
  166                   | declarator

  167 decl_list: decl
  168          | decl_list decl

  169 statement: expr_statement
  170          | labeled_statement
  171          | compound_statement
  172          | conditional_statement
  173          | iterative_statement
  174          | switch_statement
  175          | break_statement
  176          | continue_statement
  177          | return_statement
  178          | goto_statement
  179          | null_statement

  180 expr_statement: expr ';'

  181 labeled_statement: label ':' statement

  182 label: named_label
  183      | case_label
  184      | default_label

  185 @2: /* empty */

  186 compound_statement: '{' @2 decl_or_statement_list '}'
  187                   | '{' '}'

  188 decl_or_statement_list: decl_or_statement
  189                       | decl_or_statement_list decl_or_statement

  190 decl_or_statement: decl
  191                  | statement

  192 conditional_statement: if_statement

  193 if_statement: IF '(' expr ')' statement
  194             | IF '(' expr ')' statement ELSE statement

  195 iterative_statement: do_statement
  196                    | while_statement
  197                    | for_statement

  198 do_statement: DO statement WHILE '(' expr ')' ';'

  199 while_statement: WHILE '(' expr ')' statement

  200 for_statement: FOR for_expr statement

  201 for_expr: '(' init_clause ';' expr ';' expr ')'
  202         | '(' init_clause ';' expr ';' ')'
  203         | '(' init_clause ';' ';' expr ')'
  204         | '(' init_clause ';' ';' ')'
  205         | '(' ';' expr ';' expr ')'
  206         | '(' ';' expr ';' ')'
  207         | '(' ';' ';' expr ')'
  208         | '(' ';' ';' ')'

  209 init_clause: expr
  210            | decl_specs init_declarator_list

  211 switch_statement: SWITCH '(' expr ')' statement

  212 case_label: CASE constant_expr

  213 default_label: DEFAULT

  214 break_statement: BREAK ';'

  215 continue_statement: CONTINUE ';'

  216 return_statement: RETURN expr ';'
  217                 | RETURN ';'

  218 goto_statement: GOTO named_label ';'

  219 named_label: IDENT

  220 null_statement: ';'

  221 expr: comma_expr

  222 primary_expr: IDENT
  223             | NUMBER
  224             | STRING
  225             | CHARLIT
  226             | '(' expr ')'

  227 postfix_expr: primary_expr
  228             | subscript_expr
  229             | component_select_expr
  230             | function_call
  231             | post_inc_expr
  232             | post_dec_expr
  233             | compound_literal

  234 subscript_expr: postfix_expr '[' expr ']'

  235 component_select_expr: postfix_expr '.' IDENT
  236                      | postfix_expr INDSEL IDENT

  237 function_call: postfix_expr '(' expr_list ')'

  238 expr_list: /* empty */
  239          | assign_expr
  240          | expr_list ',' assign_expr

  241 post_inc_expr: postfix_expr PLUSPLUS

  242 post_dec_expr: postfix_expr MINUSMINUS

  243 compound_literal: '(' type_name ')' '{' initializer_list ',' '}'
  244                 | '(' type_name ')' '{' initializer_list '}'

  245 cast_expr: unary_expr
  246          | '(' type_name ')' cast_expr

  247 unary_expr: postfix_expr
  248           | sizeof_expr
  249           | unary_minus_expr
  250           | unary_plus_expr
  251           | log_neg_expr
  252           | bit_neg_expr
  253           | address_expr
  254           | indirection_expr
  255           | pre_inc_expr
  256           | pre_dec_expr

  257 sizeof_expr: SIZEOF unary_expr
  258            | SIZEOF '(' type_name ')'

  259 unary_minus_expr: '-' cast_expr

  260 unary_plus_expr: '+' cast_expr

  261 log_neg_expr: '!' cast_expr

  262 bit_neg_expr: '~' cast_expr

  263 address_expr: '&' cast_expr

  264 indirection_expr: '*' cast_expr

  265 pre_inc_expr: PLUSPLUS unary_expr

  266 pre_dec_expr: MINUSMINUS unary_expr

  267 mult_expr: cast_expr
  268          | mult_expr '*' cast_expr
  269          | mult_expr '/' cast_expr
  270          | mult_expr '%' cast_expr

  271 add_expr: mult_expr
  272         | add_expr '+' mult_expr
  273         | add_expr '-' mult_expr

  274 shift_expr: add_expr
  275           | shift_expr SHL add_expr
  276           | shift_expr SHR add_expr

  277 relation_expr: shift_expr
  278              | relation_expr '<' shift_expr
  279              | relation_expr '>' shift_expr
  280              | relation_expr GTEQ shift_expr
  281              | relation_expr LTEQ shift_expr

  282 equality_expr: relation_expr
  283              | equality_expr EQEQ relation_expr
  284              | equality_expr NOTEQ relation_expr

  285 bit_and_expr: equality_expr
  286             | bit_and_expr '&' equality_expr

  287 bit_xor_expr: bit_and_expr
  288             | bit_xor_expr '^' bit_and_expr

  289 bit_or_expr: bit_xor_expr
  290            | bit_or_expr '|' bit_xor_expr

  291 log_and_expr: bit_or_expr
  292             | log_and_expr LOGAND bit_or_expr

  293 log_or_expr: log_and_expr
  294            | log_or_expr LOGOR log_and_expr

  295 cond_expr: log_or_expr
  296          | log_or_expr '?' expr ':' cond_expr

  297 assign_expr: cond_expr
  298            | unary_expr '=' assign_expr
  299            | unary_expr PLUSEQ assign_expr
  300            | unary_expr MINUSEQ assign_expr
  301            | unary_expr TIMESEQ assign_expr
  302            | unary_expr DIVEQ assign_expr
  303            | unary_expr MODEQ assign_expr
  304            | unary_expr SHLEQ assign_expr
  305            | unary_expr SHREQ assign_expr
  306            | unary_expr ANDEQ assign_expr
  307            | unary_expr XOREQ assign_expr
  308            | unary_expr OREQ assign_expr

  309 comma_expr: assign_expr
  310           | comma_expr ',' assign_expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 261
'%' (37) 270
'&' (38) 263 286
'(' (40) 111 116 117 118 119 126 138 139 140 193 194 198 199 201 202
    203 204 205 206 207 208 211 226 237 243 244 246 258
')' (41) 111 116 117 118 119 126 138 139 140 193 194 198 199 201 202
    203 204 205 206 207 208 211 226 237 243 244 246 258
'*' (42) 131 132 133 134 264 268
'+' (43) 260 272
',' (44) 15 32 33 39 91 142 144 148 150 153 155 240 243 310
'-' (45) 259 273
'.' (46) 160 235
'/' (47) 269
':' (58) 95 96 181 296
';' (59) 5 89 180 198 201 202 203 204 205 206 207 208 214 215 216 217
    218 220
'<' (60) 278
'=' (61) 17 41 156 298
'>' (62) 279
'?' (63) 296
'[' (91) 112 113 114 115 135 136 159 234
']' (93) 112 113 114 115 135 136 159 234
'^' (94) 288
'{' (123) 32 33 34 35 83 84 99 100 150 151 186 187 243 244
'|' (124) 290
'}' (125) 32 33 34 35 83 84 99 100 150 151 186 187 243 244
'~' (126) 262
error (256)
IDENT (258) 37 42 85 102 129 147 148 160 219 222 235 236
CHARLIT (259) 225
STRING (260) 224
NUMBER (261) 135 223
TOKEOF (262)
INDSEL (263) 236
PLUSPLUS (264) 241 265
MINUSMINUS (265) 242 266
SHL (266) 275
SHR (267) 276
LTEQ (268) 281
GTEQ (269) 280
EQEQ (270) 283
NOTEQ (271) 284
LOGAND (272) 292
LOGOR (273) 294
ELLIPSIS (274) 142
SIZEOF (275) 257 258
AUTO (276) 18
BREAK (277) 214
CASE (278) 212
CONST (279) 120
CONTINUE (280) 215
DEFAULT (281) 213
DO (282) 198
ENUM (283) 32 33 34 35 36
EXTERN (284) 19
FOR (285) 200
GOTO (286) 218
INLINE (287) 23
REGISTER (288) 20
RESTRICT (289) 122
RETURN (290) 216 217
STATIC (291) 21
STRUCT (292) 83 84 86
SWITCH (293) 211
TYPEDEF (294) 22
UNION (295) 99 100 101
VOID (296) 103
VOLATILE (297) 121
WHILE (298) 198 199
_BOOL (299) 80
_COMPLEX (300) 47 48 49
_IMAGINARY (301)
IF (302) 193 194
ELSE (303) 194
FLOAT (304) 43 47
DOUBLE (305) 44 45 48 49
CHAR (306) 77 78 79
INT (307) 55 57 58 59 62 64 66 68 70 71 74 76
LONG (308) 45 49 61 62 63 64 65 66 67 68 73 74 75 76
SHORT (309) 54 55 56 57 69 70
SIGNED (310) 56 57 59 60 63 64 67 68 78
UNSIGNED (311) 69 70 71 72 73 74 75 76 79
OREQ (312) 308
XOREQ (313) 307
ANDEQ (314) 306
SHREQ (315) 305
SHLEQ (316) 304
MODEQ (317) 303
DIVEQ (318) 302
TIMESEQ (319) 301
MINUSEQ (320) 300
PLUSEQ (321) 299


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
translation_unit (92)
    on left: 1 2, on right: 0 2
top_level_decl (93)
    on left: 3 4, on right: 1 2
decl (94)
    on left: 5, on right: 3 167 168 190
decl_specs (95)
    on left: 6 7 8 9 10 11 12 13, on right: 5 6 8 10 12 104 105 145
    146 163 164 210
init_declarator_list (96)
    on left: 14 15, on right: 5 15 210
init_declarator (97)
    on left: 16 17, on right: 14 15
storage_class_spec (98)
    on left: 18 19 20 21 22, on right: 6 7
func_spec (99)
    on left: 23, on right: 12 13
type_spec (100)
    on left: 24 25 26 27 28 29, on right: 8 9 89
enum_type_spec (101)
    on left: 30 31, on right: 24
enum_type_def (102)
    on left: 32 33 34 35, on right: 30
enum_type_ref (103)
    on left: 36, on right: 31
enum_tag (104)
    on left: 37, on right: 32 34 36
enum_def_list (105)
    on left: 38 39, on right: 32 33 34 35 39
enum_constant_def (106)
    on left: 40 41, on right: 38 39
enum_constant (107)
    on left: 42, on right: 40 41
float_type_spec (108)
    on left: 43 44 45 46, on right: 25
complex_type_spec (109)
    on left: 47 48 49, on right: 46
int_type_spec (110)
    on left: 50 51 52 53, on right: 26
signed_type_spec (111)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68,
    on right: 50
unsigned_type_spec (112)
    on left: 69 70 71 72 73 74 75 76, on right: 51
char_type_spec (113)
    on left: 77 78 79, on right: 52
bool_type_spec (114)
    on left: 80, on right: 53
struct_type_spec (115)
    on left: 81 82, on right: 27
struct_type_def (116)
    on left: 83 84, on right: 81
struct_tag (117)
    on left: 85, on right: 83 86
struct_type_ref (118)
    on left: 86, on right: 82
field_list (119)
    on left: 87 88, on right: 83 84 88 99 100
component_decl (120)
    on left: 89, on right: 87 88
component_declarator_list (121)
    on left: 90 91, on right: 89 91
component_declarator (122)
    on left: 92 93, on right: 90 91
simple_component (123)
    on left: 94, on right: 92
bit_field (124)
    on left: 95 96, on right: 93
union_type_spec (125)
    on left: 97 98, on right: 28
union_type_def (126)
    on left: 99 100, on right: 97
union_type_ref (127)
    on left: 101, on right: 98
union_tag (128)
    on left: 102, on right: 99 101
void_type_spec (129)
    on left: 103, on right: 29
type_name (130)
    on left: 104 105, on right: 243 244 246 258
abstract_declarator (131)
    on left: 106 107 108, on right: 104 111 146
type_qualifier_list (132)
    on left: 109 110, on right: 110 131 133
direct_abstract_declarator (133)
    on left: 111 112 113 114 115 116 117 118 119, on right: 107 108
    112 114 116 118
type_qualifier (134)
    on left: 120 121 122, on right: 10 11 109 110
declarator (135)
    on left: 123 124, on right: 16 17 94 95 126 145 163 164 165 166
direct_declarator (136)
    on left: 125 126 127 128, on right: 124 130 135 136 138 139 140
simple_declarator (137)
    on left: 129, on right: 125
pointer_declarator (138)
    on left: 130, on right: 123
pointer (139)
    on left: 131 132 133 134, on right: 106 107 130 133 134
array_declarator (140)
    on left: 135 136, on right: 128
constant_expr (141)
    on left: 137, on right: 95 96 112 113 159 212
func_declarator (142)
    on left: 138 139 140, on right: 127
parameter_type_list (143)
    on left: 141 142, on right: 116 117 138
parameter_list (144)
    on left: 143 144, on right: 141 142 144 148
parameter_decl (145)
    on left: 145 146, on right: 143 144
identifier_list (146)
    on left: 147 148, on right: 139
initializer (147)
    on left: 149 150 151, on right: 17 152 153 154 155
initializer_list (148)
    on left: 152 153 154 155, on right: 150 151 153 155 243 244
designation (149)
    on left: 156, on right: 154 155
designator_list (150)
    on left: 157 158, on right: 156 158
designator (151)
    on left: 159 160, on right: 157 158
func_def (152)
    on left: 162, on right: 4
@1 (153)
    on left: 161, on right: 162
func_def_specifier (154)
    on left: 163 164 165 166, on right: 162
decl_list (155)
    on left: 167 168, on right: 163 165 168
statement (156)
    on left: 169 170 171 172 173 174 175 176 177 178 179,
    on right: 181 191 193 194 198 199 200 211
expr_statement (157)
    on left: 180, on right: 169
labeled_statement (158)
    on left: 181, on right: 170
label (159)
    on left: 182 183 184, on right: 181
compound_statement (160)
    on left: 186 187, on right: 162 171
@2 (161)
    on left: 185, on right: 186
decl_or_statement_list (162)
    on left: 188 189, on right: 186 189
decl_or_statement (163)
    on left: 190 191, on right: 188 189
conditional_statement (164)
    on left: 192, on right: 172
if_statement (165)
    on left: 193 194, on right: 192
iterative_statement (166)
    on left: 195 196 197, on right: 173
do_statement (167)
    on left: 198, on right: 195
while_statement (168)
    on left: 199, on right: 196
for_statement (169)
    on left: 200, on right: 197
for_expr (170)
    on left: 201 202 203 204 205 206 207 208, on right: 200
init_clause (171)
    on left: 209 210, on right: 201 202 203 204
switch_statement (172)
    on left: 211, on right: 174
case_label (173)
    on left: 212, on right: 183
default_label (174)
    on left: 213, on right: 184
break_statement (175)
    on left: 214, on right: 175
continue_statement (176)
    on left: 215, on right: 176
return_statement (177)
    on left: 216 217, on right: 177
goto_statement (178)
    on left: 218, on right: 178
named_label (179)
    on left: 219, on right: 182 218
null_statement (180)
    on left: 220, on right: 179
expr (181)
    on left: 221, on right: 180 193 194 198 199 201 202 203 205 206
    207 209 211 216 226 234 296
primary_expr (182)
    on left: 222 223 224 225 226, on right: 227
postfix_expr (183)
    on left: 227 228 229 230 231 232 233, on right: 234 235 236 237
    241 242 247
subscript_expr (184)
    on left: 234, on right: 228
component_select_expr (185)
    on left: 235 236, on right: 229
function_call (186)
    on left: 237, on right: 230
expr_list (187)
    on left: 238 239 240, on right: 237 240
post_inc_expr (188)
    on left: 241, on right: 231
post_dec_expr (189)
    on left: 242, on right: 232
compound_literal (190)
    on left: 243 244, on right: 233
cast_expr (191)
    on left: 245 246, on right: 246 259 260 261 262 263 264 267 268
    269 270
unary_expr (192)
    on left: 247 248 249 250 251 252 253 254 255 256,
    on right: 245 257 265 266 298 299 300 301 302 303 304 305 306 307
    308
sizeof_expr (193)
    on left: 257 258, on right: 248
unary_minus_expr (194)
    on left: 259, on right: 249
unary_plus_expr (195)
    on left: 260, on right: 250
log_neg_expr (196)
    on left: 261, on right: 251
bit_neg_expr (197)
    on left: 262, on right: 252
address_expr (198)
    on left: 263, on right: 253
indirection_expr (199)
    on left: 264, on right: 254
pre_inc_expr (200)
    on left: 265, on right: 255
pre_dec_expr (201)
    on left: 266, on right: 256
mult_expr (202)
    on left: 267 268 269 270, on right: 268 269 270 271 272 273
add_expr (203)
    on left: 271 272 273, on right: 272 273 274 275 276
shift_expr (204)
    on left: 274 275 276, on right: 275 276 277 278 279 280 281
relation_expr (205)
    on left: 277 278 279 280 281, on right: 278 279 280 281 282 283
    284
equality_expr (206)
    on left: 282 283 284, on right: 283 284 285 286
bit_and_expr (207)
    on left: 285 286, on right: 286 287 288
bit_xor_expr (208)
    on left: 287 288, on right: 288 289 290
bit_or_expr (209)
    on left: 289 290, on right: 290 291 292
log_and_expr (210)
    on left: 291 292, on right: 292 293 294
log_or_expr (211)
    on left: 293 294, on right: 294 295 296
cond_expr (212)
    on left: 295 296, on right: 137 296 297
assign_expr (213)
    on left: 297 298 299 300 301 302 303 304 305 306 307 308,
    on right: 41 149 239 240 298 299 300 301 302 303 304 305 306 307
    308 309 310
comma_expr (214)
    on left: 309 310, on right: 221 310


state 0

    0 $accept: . translation_unit $end

    IDENT     shift, and go to state 1
    AUTO      shift, and go to state 2
    CONST     shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    INLINE    shift, and go to state 6
    REGISTER  shift, and go to state 7
    RESTRICT  shift, and go to state 8
    STATIC    shift, and go to state 9
    STRUCT    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    UNION     shift, and go to state 12
    VOID      shift, and go to state 13
    VOLATILE  shift, and go to state 14
    _BOOL     shift, and go to state 15
    '*'       shift, and go to state 16
    FLOAT     shift, and go to state 17
    DOUBLE    shift, and go to state 18
    CHAR      shift, and go to state 19
    INT       shift, and go to state 20
    LONG      shift, and go to state 21
    SHORT     shift, and go to state 22
    SIGNED    shift, and go to state 23
    UNSIGNED  shift, and go to state 24
    '('       shift, and go to state 25

    translation_unit    go to state 26
    top_level_decl      go to state 27
    decl                go to state 28
    decl_specs          go to state 29
    storage_class_spec  go to state 30
    func_spec           go to state 31
    type_spec           go to state 32
    enum_type_spec      go to state 33
    enum_type_def       go to state 34
    enum_type_ref       go to state 35
    float_type_spec     go to state 36
    complex_type_spec   go to state 37
    int_type_spec       go to state 38
    signed_type_spec    go to state 39
    unsigned_type_spec  go to state 40
    char_type_spec      go to state 41
    bool_type_spec      go to state 42
    struct_type_spec    go to state 43
    struct_type_def     go to state 44
    struct_type_ref     go to state 45
    union_type_spec     go to state 46
    union_type_def      go to state 47
    union_type_ref      go to state 48
    void_type_spec      go to state 49
    type_qualifier      go to state 50
    declarator          go to state 51
    direct_declarator   go to state 52
    simple_declarator   go to state 53
    pointer_declarator  go to state 54
    pointer             go to state 55
    array_declarator    go to state 56
    func_declarator     go to state 57
    func_def            go to state 58
    func_def_specifier  go to state 59


state 1

  129 simple_declarator: IDENT .

    $default  reduce using rule 129 (simple_declarator)


state 2

   18 storage_class_spec: AUTO .

    $default  reduce using rule 18 (storage_class_spec)


state 3

  120 type_qualifier: CONST .

    $default  reduce using rule 120 (type_qualifier)


state 4

   32 enum_type_def: ENUM . enum_tag '{' enum_def_list ',' '}'
   33              | ENUM . '{' enum_def_list ',' '}'
   34              | ENUM . enum_tag '{' enum_def_list '}'
   35              | ENUM . '{' enum_def_list '}'
   36 enum_type_ref: ENUM . enum_tag

    IDENT  shift, and go to state 60
    '{'    shift, and go to state 61

    enum_tag  go to state 62


state 5

   19 storage_class_spec: EXTERN .

    $default  reduce using rule 19 (storage_class_spec)


state 6

   23 func_spec: INLINE .

    $default  reduce using rule 23 (func_spec)


state 7

   20 storage_class_spec: REGISTER .

    $default  reduce using rule 20 (storage_class_spec)


state 8

  122 type_qualifier: RESTRICT .

    $default  reduce using rule 122 (type_qualifier)


state 9

   21 storage_class_spec: STATIC .

    $default  reduce using rule 21 (storage_class_spec)


state 10

   83 struct_type_def: STRUCT . struct_tag '{' field_list '}'
   84                | STRUCT . '{' field_list '}'
   86 struct_type_ref: STRUCT . struct_tag

    IDENT  shift, and go to state 63
    '{'    shift, and go to state 64

    struct_tag  go to state 65


state 11

   22 storage_class_spec: TYPEDEF .

    $default  reduce using rule 22 (storage_class_spec)


state 12

   99 union_type_def: UNION . union_tag '{' field_list '}'
  100               | UNION . '{' field_list '}'
  101 union_type_ref: UNION . union_tag

    IDENT  shift, and go to state 66
    '{'    shift, and go to state 67

    union_tag  go to state 68


state 13

  103 void_type_spec: VOID .

    $default  reduce using rule 103 (void_type_spec)


state 14

  121 type_qualifier: VOLATILE .

    $default  reduce using rule 121 (type_qualifier)


state 15

   80 bool_type_spec: _BOOL .

    $default  reduce using rule 80 (bool_type_spec)


state 16

  131 pointer: '*' . type_qualifier_list
  132        | '*' .
  133        | '*' . type_qualifier_list pointer
  134        | '*' . pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 8
    VOLATILE  shift, and go to state 14
    '*'       shift, and go to state 16

    $default  reduce using rule 132 (pointer)

    type_qualifier_list  go to state 69
    type_qualifier       go to state 70
    pointer              go to state 71


state 17

   43 float_type_spec: FLOAT .
   47 complex_type_spec: FLOAT . _COMPLEX

    _COMPLEX  shift, and go to state 72

    $default  reduce using rule 43 (float_type_spec)


state 18

   44 float_type_spec: DOUBLE .
   48 complex_type_spec: DOUBLE . _COMPLEX

    _COMPLEX  shift, and go to state 73

    $default  reduce using rule 44 (float_type_spec)


state 19

   77 char_type_spec: CHAR .

    $default  reduce using rule 77 (char_type_spec)


state 20

   58 signed_type_spec: INT .

    $default  reduce using rule 58 (signed_type_spec)


state 21

   45 float_type_spec: LONG . DOUBLE
   49 complex_type_spec: LONG . DOUBLE _COMPLEX
   61 signed_type_spec: LONG .
   62                 | LONG . INT
   65                 | LONG . LONG
   66                 | LONG . LONG INT

    DOUBLE  shift, and go to state 74
    INT     shift, and go to state 75
    LONG    shift, and go to state 76

    $default  reduce using rule 61 (signed_type_spec)


state 22

   54 signed_type_spec: SHORT .
   55                 | SHORT . INT

    INT  shift, and go to state 77

    $default  reduce using rule 54 (signed_type_spec)


state 23

   56 signed_type_spec: SIGNED . SHORT
   57                 | SIGNED . SHORT INT
   59                 | SIGNED . INT
   60                 | SIGNED .
   63                 | SIGNED . LONG
   64                 | SIGNED . LONG INT
   67                 | SIGNED . LONG LONG
   68                 | SIGNED . LONG LONG INT
   78 char_type_spec: SIGNED . CHAR

    CHAR   shift, and go to state 78
    INT    shift, and go to state 79
    LONG   shift, and go to state 80
    SHORT  shift, and go to state 81

    $default  reduce using rule 60 (signed_type_spec)


state 24

   69 unsigned_type_spec: UNSIGNED . SHORT
   70                   | UNSIGNED . SHORT INT
   71                   | UNSIGNED . INT
   72                   | UNSIGNED .
   73                   | UNSIGNED . LONG
   74                   | UNSIGNED . LONG INT
   75                   | UNSIGNED . LONG LONG
   76                   | UNSIGNED . LONG LONG INT
   79 char_type_spec: UNSIGNED . CHAR

    CHAR   shift, and go to state 82
    INT    shift, and go to state 83
    LONG   shift, and go to state 84
    SHORT  shift, and go to state 85

    $default  reduce using rule 72 (unsigned_type_spec)


state 25

  126 direct_declarator: '(' . declarator ')'

    IDENT  shift, and go to state 1
    '*'    shift, and go to state 16
    '('    shift, and go to state 25

    declarator          go to state 86
    direct_declarator   go to state 52
    simple_declarator   go to state 53
    pointer_declarator  go to state 54
    pointer             go to state 55
    array_declarator    go to state 56
    func_declarator     go to state 57


state 26

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . top_level_decl

    $end      shift, and go to state 87
    IDENT     shift, and go to state 1
    AUTO      shift, and go to state 2
    CONST     shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    INLINE    shift, and go to state 6
    REGISTER  shift, and go to state 7
    RESTRICT  shift, and go to state 8
    STATIC    shift, and go to state 9
    STRUCT    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    UNION     shift, and go to state 12
    VOID      shift, and go to state 13
    VOLATILE  shift, and go to state 14
    _BOOL     shift, and go to state 15
    '*'       shift, and go to state 16
    FLOAT     shift, and go to state 17
    DOUBLE    shift, and go to state 18
    CHAR      shift, and go to state 19
    INT       shift, and go to state 20
    LONG      shift, and go to state 21
    SHORT     shift, and go to state 22
    SIGNED    shift, and go to state 23
    UNSIGNED  shift, and go to state 24
    '('       shift, and go to state 25

    top_level_decl      go to state 88
    decl                go to state 28
    decl_specs          go to state 29
    storage_class_spec  go to state 30
    func_spec           go to state 31
    type_spec           go to state 32
    enum_type_spec      go to state 33
    enum_type_def       go to state 34
    enum_type_ref       go to state 35
    float_type_spec     go to state 36
    complex_type_spec   go to state 37
    int_type_spec       go to state 38
    signed_type_spec    go to state 39
    unsigned_type_spec  go to state 40
    char_type_spec      go to state 41
    bool_type_spec      go to state 42
    struct_type_spec    go to state 43
    struct_type_def     go to state 44
    struct_type_ref     go to state 45
    union_type_spec     go to state 46
    union_type_def      go to state 47
    union_type_ref      go to state 48
    void_type_spec      go to state 49
    type_qualifier      go to state 50
    declarator          go to state 51
    direct_declarator   go to state 52
    simple_declarator   go to state 53
    pointer_declarator  go to state 54
    pointer             go to state 55
    array_declarator    go to state 56
    func_declarator     go to state 57
    func_def            go to state 58
    func_def_specifier  go to state 59


state 27

    1 translation_unit: top_level_decl .

    $default  reduce using rule 1 (translation_unit)


state 28

    3 top_level_decl: decl .

    $default  reduce using rule 3 (top_level_decl)


state 29

    5 decl: decl_specs . init_declarator_list ';'
  163 func_def_specifier: decl_specs . declarator decl_list
  164                   | decl_specs . declarator

    IDENT  shift, and go to state 1
    '*'    shift, and go to state 16
    '('    shift, and go to state 25

    init_declarator_list  go to state 89
    init_declarator       go to state 90
    declarator            go to state 91
    direct_declarator     go to state 52
    simple_declarator     go to state 53
    pointer_declarator    go to state 54
    pointer               go to state 55
    array_declarator      go to state 56
    func_declarator       go to state 57


state 30

    6 decl_specs: storage_class_spec . decl_specs
    7           | storage_class_spec .

    AUTO      shift, and go to state 2
    CONST     shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    INLINE    shift, and go to state 6
    REGISTER  shift, and go to state 7
    RESTRICT  shift, and go to state 8
    STATIC    shift, and go to state 9
    STRUCT    shift, and go to state 10
    TYPEDEF   shift, and go to state 11
    UNION     shift, and go to state 12
    VOID      shift, and go to state 13
    VOLATILE  shift, and go to state 14
    _BOOL     shift, and go to state 15
    FLOAT     shift, and go to state 17
    DOUBLE    shift, and go to state 18
    CHAR      shift, and go to state 19
    INT       shift, and go to state 20
    LONG      shift, and go to state 21
    SHORT     shift, and go to state 22
    SIGNED    shift, and go to state 23
    UNSIGNED  shift, and go to state 24
